--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
     "crypto-js": "^3.1.9-1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "http": "0.0.0"
   }
