--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A simple server demonstating how to authenticate peers.",
   "main": "auth.js",
   "scripts": {
+    "watch": "watchify src/entry.js -o static/skyway-auth.js -t [ babelify --presets [ es2015 ] ]",
+    "build": "browserify src/entry.js -o static/skyway-auth.js -t [ babelify --presets [ es2015 ] ]",
     "start": "node auth.js"
   },
   "author": "Ryosuke Otsuya",
@@ -14,6 +16,15 @@
     "crypto-js": "^3.1.9-1",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
-    "http": "0.0.0"
+    "http": "0.0.0",
+    "randomstring": "^1.1.5"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^8.0.0",
+    "browserify": "^14.5.0",
+    "events": "^1.1.1",
+    "watchify": "^3.9.0"
   }
 }
