--- a/package.json
+++ b/package.json
@@ -4,27 +4,18 @@
   "description": "A simple server demonstating how to authenticate peers.",
   "main": "auth.js",
   "scripts": {
-    "watch": "watchify src/entry.js -o static/skyway-auth.js -t [ babelify --presets [ es2015 ] ]",
-    "build": "browserify src/entry.js -o static/skyway-auth.js -t [ babelify --presets [ es2015 ] ]",
     "start": "node auth.js"
   },
   "author": "Ryosuke Otsuya",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "cookie-parser": "^1.4.3",
     "crypto-js": "^3.1.9-1",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
-    "http": "0.0.0",
-    "randomstring": "^1.1.5"
+    "multer": "^1.3.0",
+    "randomstring": "^1.1.5",
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5"
   },
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babelify": "^8.0.0",
-    "browserify": "^14.5.0",
-    "events": "^1.1.1",
-    "watchify": "^3.9.0"
-  }
+  "devDependencies": {}
 }
